[package]
name = "ctchi"
version = "0.2.0"
authors = ["glotitude <ltoshchev@gmail.com>"]
edition = "2018"
description = "Home made web framework."
license = "BSD-3-Clause"
repository = "https://github.com/glotitude/ctchi"
homepage = "https://github.com/glotitude/ctchi"
readme = "README.md"

exclude = [
    "src/static/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
