[package]
name = "ctchi"
version = "0.10.0"
authors = ["glotitude <ltoshchev@gmail.com>"]
edition = "2018"
description = "Home made web framework."
license = "BSD-3-Clause"
repository = "https://github.com/glotitude/ctchi"
homepage = "https://github.com/glotitude/ctchi"
readme = "README.md"

exclude = [
    "src/pages.static/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctchi_codegen = { path = "ctchi_codegen", version = "0.1.0" }
regex = "1"

[workspace]
members = [
    "ctchi_codegen",
]