[package]
name = "ctchi_codegen"
version = "0.2.0"
authors = ["glotitude <ltoshchev@gmail.com>"]
edition = "2018"
description = "Macroses for Ctchi framework"
license = "BSD-3-Clause"
repository = "https://github.com/glotitude/ctchi"
homepage = "https://github.com/glotitude/ctchi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "parsing", "proc-macro"] }
quote = "1.0"
regex = "1"